--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -621,10 +621,10 @@ blockquote p { color: #000; font-size: 20px; font-weight: 300; line-height: 28px
 
 .gap { display: inline-block; height: 0 !important; }
 
-#features { font-size: 0; text-align: justify; }
+#features { font-size: 0; text-align: justify; display: flex; flex-wrap: wrap; justify-content: space-between; align-items: stretch; }
 #features:after { content: ''; display: inline-block; width: 100%; }
 #features .mix { display: none; }
-#features li { background: #fff; box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1); box-sizing: border-box; width: 32%; margin-bottom: 20px; text-align: left; vertical-align: top; }
+#features li { background: #fff; box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1); box-sizing: border-box; width: 32%; margin-bottom: 20px; text-align: left; vertical-align: top; height: auto !important; }
 #features img { display: block; width: 100%; height: auto; }
 #features .img-link { display: block; }
 #features .box-wrap { padding: 30px; width: 100%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
@@ -633,6 +633,12 @@ blockquote p { color: #000; font-size: 20px; font-weight: 300; line-height: 28px
 #features h3 a:hover { text-decoration: underline; }
 #features h3 span { display: block; font-weight: 400; font-size: 12px; text-transform: uppercase; color: #6a6a6a; line-height: 1.2; margin: 5px 0 0 0; }
 #features p { margin-bottom: 20px; }
+
+#features .featured-slideshow-container  { position: relative; }
+#features .featured-slideshow-container .slick-dots { display: block; position: absolute; z-index: 10; bottom: 0; left: 0; height: 50px; width: 100%; padding: 20px; box-sizing: border-box; background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0, rgba(0,0,0,.3) 100%); background: linear-gradient(to bottom, rgba(0,0,0,0) 0, rgba(0,0,0,.3) 100%); }
+#features .featured-slideshow-container .slick-dots li { display: inline-block; margin: 0 10px 0 0; background: none; box-shadow: none; width: auto; }
+#features .featured-slideshow-container .slick-dots li button { border: 1px solid #fff; border-radius: 50px; width: 10px; height: 10px; display: block; font-size: 0; margin: 0; padding: 0; background: none; }
+#features .featured-slideshow-container .slick-dots li.slick-active button { border: 1px solid #fff; background: #fff; }
 
 #fleet { overflow: hidden; }
 #fleet li { display: block; float: left; width: 33.33%; position: relative; overflow: hidden; }
